Definitions/Namespace-Dev-Def.yaml
apiVersion: v1
kind: Namespace                                           
metadata:
  name: development
  labels:
    name: development
