Definitions/IngressRulesDef.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testcoreapp-ingress
  namespace: ingress-nginx
spec:
  rules:
  - host: testcoreapp.phase1.awsdevus.mnstr.io
    http:
      paths:
      - backend:
          serviceName: testcoreapp-service
          servicePort: 80
  - host: jenkins.phase1.awsdevus.mnstr.io
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
